2012-06-28 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions.php: fixed into the function "copy_dir" when
	pass a empty string or bad directory for source.
	
	MERGED FROM THE TRUNK

2012-06-26 Miguel de Dios <miguel.dedios@artica.es>
	
	* DEBIAN/control: removed the dependency for "mysql-server" because
	the console can be in a machine without mysql server but it is
	necesary the mysql-client for backup process.
	
	MERGED FROM THE TRUNK

2012-06-26 Miguel de Dios <miguel.dedios@artica.es>
	
	* DEBIAN/control: added mysql-server dependency.

2012-06-26 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/events/events.php: Url tag compatible with IE9.

2012-06-26  Sancho Lerena <slerena@artica.es>

	* include/languages/nl.mo,
	include/languages/pl.mo,
	include/languages/it.mo,
	include/languages/sl.mo,
	include/languages/pt.mo,
	include/languages/index.pot: Forgotten .pot update (this is the 
	uploaded to launchpad yesterday, everything is up to date, dont worry)


2012-06-26  Junichi Satoh  <junichi@rworks.jp>

	* include/languages/ja.po, include/languages/ja.mo: Translated some
	words.

2012-06-25 Tomas Palacios <tomas.palacios@artica.es>

	* include/languages: updated template, po and mo files.

2012-06-25 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_graph.php: cleaned source code style.
	
	* include/functions_reporting.php: added subtype into the title
	in "Top N".

2012-06-25 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/auth/dev.php
	 include/auth/ldap.php
	 include/auth/mysql.php: Compatible with IE9.
	* godmode/reporting/visual_console_builder.wizard.php: 
	'item per agent' functionality.  

2012-06-25 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_visual_map.php
	 godmode/reporting/visual_console_builder.wizard.php
	 godmode/reporting/visual_console_builder.php: Visual console 
	 wizard 'item per agent' functionality. 

	* godmode/agentes/module_manager_editor_common.php: Fixed 